Add link to Recipe in the file

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Mouth Watering Recipes</h1>
+        <a href="./diff-recipes/green_no-bean_hummus.html" target="_blank" rel="noopener noreferrer">Green No-Bean Hummus</a>
     </body>
 </html>
