Add <p> in the ordered list of Steps in Recipe file to make it spacious to read

--- a/diff-recipes/green_no-bean_hummus.html
+++ b/diff-recipes/green_no-bean_hummus.html
@@ -33,9 +33,9 @@
             <li><p>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler. Line a baking sheet with foil.</p></li>
             <li><p>Toss zucchini with 2 tablespoons olive oil, toss, and spread out in a single layer on the prepared baking sheet, making sure zucchini pieces touch each other.</p></li>
             <li><p>Broil on high heat until zucchini start to brown and are lightly charred, 5 to 6 minutes. Remove pan and turn zucchini pieces over. Return and broil until zucchini are tender but not mushy, and nicely browned, 5 to 6 minutes longer.</p></li>
-            <li>Transfer zucchini to a strainer and let drain until cooled to room temperature, about 45 minutes.</li>
-            <li>Combine drained zucchini, remaining 2 tablespoons olive oil, tahini, garlic, lemon juice, basil, ½ teaspoon salt, cumin, black pepper, and cayenne in a blender. Blend until smooth, and taste for seasoning. You can also use an immersion blender.</li>
-            <li>Wrap and chill before serving.</li>
+            <li><p>Transfer zucchini to a strainer and let drain until cooled to room temperature, about 45 minutes.</p></li>
+            <li><p>Combine drained zucchini, remaining 2 tablespoons olive oil, tahini, garlic, lemon juice, basil, ½ teaspoon salt, cumin, black pepper, and cayenne in a blender. Blend until smooth, and taste for seasoning. You can also use an immersion blender.</p></li>
+            <li><p>Wrap and chill before serving.</p></li>
         </ol>
     </body>
 </html>
