Add Return to Index/Main Page in Recipe file

--- a/diff-recipes/green_no-bean_hummus.html
+++ b/diff-recipes/green_no-bean_hummus.html
@@ -37,5 +37,6 @@
             <li><p>Combine drained zucchini, remaining 2 tablespoons olive oil, tahini, garlic, lemon juice, basil, ½ teaspoon salt, cumin, black pepper, and cayenne in a blender. Blend until smooth, and taste for seasoning. You can also use an immersion blender.</p></li>
             <li><p>Wrap and chill before serving.</p></li>
         </ol>
+        <a href="../index.html" target="_self" rel="noopener noreferer"><em>Return to Main Page</em></a>
     </body>
 </html>
