add basic css style like bg color,fonts and border

--- a/diff-recipes/green_no-bean_hummus.html
+++ b/diff-recipes/green_no-bean_hummus.html
@@ -3,40 +3,44 @@
     <head>
         <meta charset="UTF-8">
         <title>Green No-Bean Hummus</title>
+
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <h1>Green No-Bean Hummus</h1>
-        <img src="https://www.allrecipes.com/thmb/gbpxlKynSsNOs0f1ddWeLjYOM38=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7566683GreenNoBeanHummusChefJohn-5f12fe8d425c46e0889efb863c0d47cd.jpg" width="469">
-        <h2>Description</h2>
-        <p>This very exciting green hummus-alternative is made with zucchini that is salted and broiled to bring out the flavor. 
-            It is one of my all-time favorite dips.
-            It’s easy to digest, low calorie, and keto friendly, and most importantly: simply delicious.</p>
-        Hummus is such a crowd-pleasing, great tasting dip that even people who have trouble digesting legumes will throw caution to the wind (pun very much intended) and dive right in.
-        They understand the risks, repercussions, and almost certain reverberations, but it’s just so good they decide to live in the moment. Well, this beautiful, almost as delicious, and significantly easier to digest, green, no-bean hummus is dedicated to them.
-        <h3>Ingredients</h3>
-        <ul>
-            <li>2 1/2 pounds zucchini</li>
-            <li>2 tablespoons kosher salt, plus more to taste</li>
-            <li>4 tablespoons olive oil, divided</li>
-            <li>3 cloves crushed garlic</li>
-            <li>3 tablespoons tahini</li>
-            <li>1/2 lemon, juiced, plus more to taste</li>
-            <li>6 leaf basil leaves, sliced</li>
-            <li>1/4 teaspoon ground black pepper</li>
-            <li>1/4 teaspoon cumin</li>
-            <li>1 pinch cayenne</li>
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li><p>Trim ends from zucchini and cut into quarters. Trim out seeds if zucchini are really big. Cut into 1 ½-inch pieces and add to a bowl. Toss thoroughly with 2 tablespoons kosher salt and let sit for 15 to 20 minutes, tossing halfway through.</p></li>
-            <li><p>Transfer zucchini to a strainer and rinse off salt very thoroughly. Let drain well before transferring to a bowl.</p></li>
-            <li><p>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler. Line a baking sheet with foil.</p></li>
-            <li><p>Toss zucchini with 2 tablespoons olive oil, toss, and spread out in a single layer on the prepared baking sheet, making sure zucchini pieces touch each other.</p></li>
-            <li><p>Broil on high heat until zucchini start to brown and are lightly charred, 5 to 6 minutes. Remove pan and turn zucchini pieces over. Return and broil until zucchini are tender but not mushy, and nicely browned, 5 to 6 minutes longer.</p></li>
-            <li><p>Transfer zucchini to a strainer and let drain until cooled to room temperature, about 45 minutes.</p></li>
-            <li><p>Combine drained zucchini, remaining 2 tablespoons olive oil, tahini, garlic, lemon juice, basil, ½ teaspoon salt, cumin, black pepper, and cayenne in a blender. Blend until smooth, and taste for seasoning. You can also use an immersion blender.</p></li>
-            <li><p>Wrap and chill before serving.</p></li>
-        </ol>
-        <a href="../index.html" target="_self" rel="noopener noreferer"><em>Return to Main Page</em></a>
+        <div id="Main">
+            <h1 class="heading">Green No-Bean Hummus</h1>
+            <img src="https://www.allrecipes.com/thmb/gbpxlKynSsNOs0f1ddWeLjYOM38=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7566683GreenNoBeanHummusChefJohn-5f12fe8d425c46e0889efb863c0d47cd.jpg" width="469">
+            <h2 class="Description">Description</h2>
+            <p class="para">This very exciting green hummus-alternative is made with zucchini that is salted and broiled to bring out the flavor. 
+                It is one of my all-time favorite dips.
+                It’s easy to digest, low calorie, and keto friendly, and most importantly: simply delicious.</p>
+            Hummus is such a crowd-pleasing, great tasting dip that even people who have trouble digesting legumes will throw caution to the wind (pun very much intended) and dive right in.
+            They understand the risks, repercussions, and almost certain reverberations, but it’s just so good they decide to live in the moment. Well, this beautiful, almost as delicious, and significantly easier to digest, green, no-bean hummus is dedicated to them.
+            <h3 class="Ingredients">Ingredients</h3>
+            <ul class="unordered list">
+                <li>2 1/2 pounds zucchini</li>
+                <li>2 tablespoons kosher salt, plus more to taste</li>
+                <li>4 tablespoons olive oil, divided</li>
+                <li>3 cloves crushed garlic</li>
+                <li>3 tablespoons tahini</li>
+                <li>1/2 lemon, juiced, plus more to taste</li>
+                <li>6 leaf basil leaves, sliced</li>
+                <li>1/4 teaspoon ground black pepper</li>
+                <li>1/4 teaspoon cumin</li>
+                <li>1 pinch cayenne</li>
+            </ul>
+            <h3>Steps</h3>
+            <ol class="ordered list">
+                <li><p>Trim ends from zucchini and cut into quarters. Trim out seeds if zucchini are really big. Cut into 1 ½-inch pieces and add to a bowl. Toss thoroughly with 2 tablespoons kosher salt and let sit for 15 to 20 minutes, tossing halfway through.</p></li>
+                <li><p>Transfer zucchini to a strainer and rinse off salt very thoroughly. Let drain well before transferring to a bowl.</p></li>
+                <li><p>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler. Line a baking sheet with foil.</p></li>
+                <li><p>Toss zucchini with 2 tablespoons olive oil, toss, and spread out in a single layer on the prepared baking sheet, making sure zucchini pieces touch each other.</p></li>
+                <li><p>Broil on high heat until zucchini start to brown and are lightly charred, 5 to 6 minutes. Remove pan and turn zucchini pieces over. Return and broil until zucchini are tender but not mushy, and nicely browned, 5 to 6 minutes longer.</p></li>
+                <li><p>Transfer zucchini to a strainer and let drain until cooled to room temperature, about 45 minutes.</p></li>
+                <li><p>Combine drained zucchini, remaining 2 tablespoons olive oil, tahini, garlic, lemon juice, basil, ½ teaspoon salt, cumin, black pepper, and cayenne in a blender. Blend until smooth, and taste for seasoning. You can also use an immersion blender.</p></li>
+                <li><p>Wrap and chill before serving.</p></li>
+            </ol>
+            <a class="link" href="../index.html" target="_self" rel="noopener noreferer"><em>Return to Main Page</em></a>
+        </div>
     </body>
 </html>
