--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Tasty Recipes</title>
+
+        <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
-        <h1>Mouth Watering Recipes</h1>
-        <a href="./diff-recipes/green_no-bean_hummus.html" target="_blank" rel="noopener noreferrer">Green No-Bean Hummus</a>
+        <h1 class="heading">Mouth Watering Recipes</h1>
+        <a class="link" href="./diff-recipes/green_no-bean_hummus.html" target="_blank" rel="noopener noreferrer">Green No-Bean Hummus</a>
     </body>
 </html>
