add more css style using the knowlesge of box model and normal-flow

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
-        <h1 class="heading">Mouth Watering Recipes</h1>
-        <a class="link" href="./diff-recipes/green_no-bean_hummus.html" target="_blank" rel="noopener noreferrer">Green No-Bean Hummus</a>
-    </body>
+        <div class="main">
+            <h1 class="heading">Mouth Watering Recipes</h1>
+            <div class="links">
+                <a  href="./diff-recipes/green_no-bean_hummus.html" target="_blank" rel="noopener noreferrer">Green No-Bean Hummus</a>
+            </div>
+        </div>    
+</body>
 </html>
